# crate-validador-rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md
.github/workflows/: rust.yml
examples/: cnpj.rs  cpf.rs  validar.rs
src/: cnpj.rs  cpf.rs  lib.rs  utils.rs
tests/: cnpj.rs  cpf.rs
