[package]
name = "crate_validador_rust"
version = "0.1.2"
edition = "2024"
authors = ["José Rodrigues <americojar2014@gmail.com>"]
description = "Biblioteca para validação de CPF em Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/josearodrigues/crate-validador-rust"
homepage = "https://github.com/josearodrigues/crate-validador-rust"
documentation = "https://docs.rs/validador"
readme = "README.md"
keywords = [
    "cpf",
    "validator",
    "validation",
    "brazil",
    "document"
]
categories = [
    "algorithms",
    "value-formatting"
]
rust-version = "1.96"
